admininportant channel (centcomm)

--- a/bridge/outer/classic-alpha.config.json
+++ b/bridge/outer/classic-alpha.config.json
@@ -9,6 +9,7 @@
 		"adminalert": ["401041581609582592"],
 		"adminban": ["401187991005167656", "401041759137693698"],
 		"adminwl": ["401187991005167656"],
+		"adminimportant": ["401041759137693698"],
 		"ooc": []
 	},
 	"roles-map": {
