IN topic commands

--- a/bridge/classic-alpha.config.json
+++ b/bridge/classic-alpha.config.json
@@ -17,5 +17,66 @@
 		"everyone": "everyone",
 		"roundstart": "Round-slap",
 		"event": "Event-slap"
+	},
+	"commands": {
+		"help": {
+			"arguments": 0,
+			"optional-arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"announce": {
+			"arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"fax": {
+			"arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"centcomm": {
+			"arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"pm": {
+			"arguments": 2,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"ooc": {
+			"arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"kick": {
+			"arguments": 2,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"banlist": {
+			"arguments": 1,
+			"optional-arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"ban": {
+			"arguments": 3,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"unban": {
+			"arguments": 2,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"noteslist": {
+			"arguments": 1,
+			"optional-arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"notedel": {
+			"arguments": 2,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"pp": {
+			"arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"status": {
+			"arguments": 0,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		}
 	}
 }
