Enable OOC channel

--- a/bridge/classic-alpha.config.json
+++ b/bridge/classic-alpha.config.json
@@ -10,7 +10,7 @@
 		"adminban": ["401187991005167656", "401041759137693698"],
 		"adminwl": ["401187991005167656"],
 		"adminimportant": ["401041759137693698"],
-		"ooc": []
+		"ooc": ["876164972118425640"]
 	},
 	"roles-map": {
 		"here": "here",
