--- a/bridge/classic-alpha.config.json
+++ b/bridge/classic-alpha.config.json
@@ -44,11 +44,20 @@
 			"arguments": 1,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
 		},
+		"toggleooc": {
+			"arguments": 0,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
 		"kick": {
 			"arguments": 2,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
 		},
 		"banlist": {
+			"arguments": 1,
+			"optional-arguments": 1,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"bansarchive": {
 			"arguments": 1,
 			"optional-arguments": 1,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
@@ -68,6 +77,11 @@
 		},
 		"notedel": {
 			"arguments": 2,
+			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
+		},
+		"ert": {
+			"arguments": 0,
+			"optional-arguments": 1,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
 		},
 		"pp": {
