--- a/bridge/classic-beta.config.json
+++ b/bridge/classic-beta.config.json
@@ -51,7 +51,7 @@
 			"arguments": 2,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
 		},
-		"banlist": {
+		"banslist": {
 			"arguments": 1,
 			"optional-arguments": 1,
 			"groups": ["401036254403362831", "401035505967431691", "401035599198289922"]
